# OnlineLearningController

./: .gitignore  README.md  setup-vrep.sh  setup.cfg  setup.py
data/: pendulum.json  reach.json  reach_torque.json  reach_velocity.json  reacher.json  simple-test.json
data/mujoco/: half_cheetah.json  hopper.json  inverted_double_pendulum.json  inverted_pendulum.json  reacher.json
data/networks/: mlp.json
data/params/: short_test.json
data/roboschool/: continuous_reacher2.json  reacher.json  reacher2.json  reacher2joint.json  reacher2length.json  reacher2motor.json  reacher3.json  reacher3joint.json  reacher3length.json  reacher3motor.json  reacher4.json  reacher4length.json  reacher4motor.json  reacher7.json
data/robots/: KR5arcHW.json
data/tasks/: gym.json  reach.json
olc/: __init__.py  controller.py  entry_points.py  logger.py  neural_network.py  noise.py  replay_buffer.py  settings.py  simulation.py
olc/data/: params_defaults.json
olc/environments/: __init__.py  launcher.py  reach.py  reach_torque.py  reach_velocity.py  reacher2.py  reacher3.py  reacher4.py  reacher7.py  simulation.py  spaces.py
olc/environments/data/: reach_defaults.json  reacher2length.xml  reacher2motor.xml  reacher3.xml  reacher3length.xml  reacher3motor.xml  reacher4.xml  reacher4length.xml  reacher4motor.xml  reacher7.xml  reachvelocity_defaults.json  simulation_defaults.json
