# Metadata for OnlineLearningController

[metadata]
name = Online Learning Controller
version = 0.0.0
author = Luis Alejandro Lara Patiño
author_email = luislpatino@gmail.com

[options]
python_requires = >= 3.0
setup_requires =
	setuptools >= 38.3.0
install_requires =
	matplotlib
	numpy
	tensorflow
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
	olc = olc.entry_points:olc

[options.package_data]
* = data/*.json
