# Metadata for OnlineLearningController

[metadata]
name = Online Learning Controller
version = 0.0.0
author = Luis Alejandro Lara Patiño
author_email = luislpatino@gmail.com

[options]
python_requires = >= 3.0
setup_requires =
	setuptools >= 38.3.0
install_requires =
	gym
	numpy
	tensorflow
packages = find:
include_package_data = true

[options.entry_points]
console_scripts =
	olc-test = olc.entry_points:olc_test
	olc-train = olc.entry_points:olc_train

[options.extras_require]
mujoco = mujoco-py

[options.package_data]
* = data/*.json
